--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,35 +6,36 @@ on:
 jobs:
   mirror-itch:
     runs-on: ubuntu-latest
-
     env:
       BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
       ITCH_PROJECT: yourusername/mindustry
       RELEASE_TAG: itch-mirror
 
     steps:
-      - name: Set up Git
+      - name: Setup Git
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Install butler
+      - name: Install butler stable version
         run: |
-          wget -qO- https://broth.itch.ovh/butler/linux-amd64-head/butler.gz | gunzip > butler
+          curl -L -o butler.zip https://broth.itch.zone/butler/linux-amd64/15.24.0/archive/default
+          unzip butler.zip
           chmod +x butler
+          ./butler -V
           sudo mv butler /usr/local/bin
 
-      - name: Download builds from Itch.io
+      - name: Download from Itch.io
         run: |
-          mkdir -p itch-download
+          mkdir itch-download
           butler -j download "$ITCH_PROJECT" itch-download --headless
 
-      - name: Archive downloaded files
+      - name: Archive files
         run: |
           cd itch-download
           zip -r ../itch-artifact.zip .
 
-      - name: Upload to Release as artifact
+      - name: Upload artifact to Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.RELEASE_TAG }}
