--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,16 @@
 name: Mirror Itch.io Builds
 
 on:
+  # 每次 push（任意分支）
+  push:
+    branches:
+      - '*'
+
+  # 每天凌晨 00:00 UTC（北京时间 08:00）
+  schedule:
+    - cron: '0 0 * * *'
+
+  # 手动触发（可选）
   workflow_dispatch:
 
 jobs:
