--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,20 +1,16 @@
 name: Mirror Mindustry Itch Builds
 
 on:
-  # 每天定时（UTC 0点）
   schedule:
-    - cron: '0 0 * * *'
-
-  # 支持手动点击触发
+    - cron: '0 0 * * *'  # 每天 UTC 0 点
   workflow_dispatch:
-
-  # 每次 push 自动运行
-  push:
+  push:  # 支持推送后自动触发
+    paths:
+      - '**/*'
 
 jobs:
   mirror:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -30,18 +26,16 @@ jobs:
       - name: Run Puppeteer to collect download links
         run: node scrape-itch-downloads.js
 
+      - name: Prepare download folder
+        run: mkdir -p downloads
+
       - name: Download all files
-        run: |
-          mkdir -p downloads
-          bash download.sh
+        run: bash download.sh
 
-      - name: Zip all builds
-        run: zip -r itch-mirror.zip downloads
-
-      - name: Upload to GitHub Release
+      - name: Upload to release (each file separately)
         uses: softprops/action-gh-release@v2
         with:
           tag_name: itch-mirror
-          files: itch-mirror.zip
+          files: downloads/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
