--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,32 +4,94 @@ on:
   schedule:
     - cron: '0 0 * * *'  # 每天 UTC 0 点
   workflow_dispatch:
-  push:  # 支持推送后自动触发
+  push:
     paths:
-      - '**/*'
+      - '**.js'
+      - '.github/workflows/*.yml'
 
 jobs:
   mirror:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 24
+          cache: 'npm'
+
+      - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            ca-certificates \
+            fonts-liberation \
+            libappindicator3-1 \
+            libasound2 \
+            libatk-bridge2.0-0 \
+            libatk1.0-0 \
+            libc6 \
+            libcairo2 \
+            libcups2 \
+            libdbus-1-3 \
+            libexpat1 \
+            libfontconfig1 \
+            libgbm1 \
+            libgcc1 \
+            libglib2.0-0 \
+            libgtk-3-0 \
+            libnspr4 \
+            libnss3 \
+            libpango-1.0-0 \
+            libpangocairo-1.0-0 \
+            libstdc++6 \
+            libx11-6 \
+            libx11-xcb1 \
+            libxcb1 \
+            libxcomposite1 \
+            libxcursor1 \
+            libxdamage1 \
+            libxext6 \
+            libxfixes3 \
+            libxi6 \
+            libxrandr2 \
+            libxrender1 \
+            libxss1 \
+            libxtst6 \
+            lsb-release \
+            wget \
+            xdg-utils
 
       - name: Install Puppeteer
-        run: npm install puppeteer
+        run: npm install puppeteer@latest
 
-      - name: Run Puppeteer to collect download links
+      - name: Create Downloads Directory
+        run: mkdir -p downloads
+
+      - name: Run Scraper
         run: node scrape-itch-downloads.js
+        timeout-minutes: 15
 
-      - name: Upload to release (each file separately)
+      - name: Compress Downloads
+        run: |
+          tar czvf mindustry-builds-$(date +%Y%m%d).tar.gz downloads/
+          ls -lh *.tar.gz
+
+      - name: Upload Release Assets
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: itch-mirror
-          files: downloads/*
+          tag_name: itch-mirror-$(date +%Y%m%d)
+          prerelease: false
+          files: |
+            mindustry-builds-*.tar.gz
+            downloads/*.log
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Cleanup
+        if: always()
+        run: |
+          rm -rf downloads/
+          rm -f mindustry-builds-*.tar.gz
