--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Mirror Mindustry Itch Builds
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天 UTC 0 点
+    - cron: '0 0 * * *'
   workflow_dispatch:
   push:
     paths:
@@ -19,10 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
-
-      - name: Install Puppeteer
-        run: npm install puppeteer
+          node-version: 20
 
       - name: Install System Dependencies
         run: |
@@ -31,7 +28,7 @@ jobs:
             ca-certificates \
             fonts-liberation \
             libappindicator3-1 \
-            libasound2 \
+            libasound2t64 \  # 关键修改
             libatk-bridge2.0-0 \
             libatk1.0-0 \
             libc6 \
@@ -67,32 +64,14 @@ jobs:
             xdg-utils
 
       - name: Install Puppeteer
-        run: npm install puppeteer@latest
-
-      - name: Create Downloads Directory
-        run: mkdir -p downloads
+        run: npm install puppeteer@21.7.0  # 使用稳定版本
 
       - name: Run Scraper
         run: node scrape-itch-downloads.js
-        timeout-minutes: 15
+        timeout-minutes: 20
 
-      - name: Compress Downloads
-        run: |
-          tar czvf mindustry-builds-$(date +%Y%m%d).tar.gz downloads/
-          ls -lh *.tar.gz
-
-      - name: Upload Release Assets
-        uses: softprops/action-gh-release@v2
+      - name: Upload Assets
+        uses: actions/upload-artifact@v3
         with:
-          tag_name: itch-mirror-$(date +%Y%m%d)
-          prerelease: false
-          files: |
-            downloads/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Cleanup
-        if: always()
-        run: |
-          rm -rf downloads/
-          rm -f mindustry-builds-*.tar.gz
+          name: mindustry-builds
+          path: downloads/
