--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   mirror:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # 明确使用旧版LTS系统
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -19,56 +19,37 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 20
 
-      - name: Install System Dependencies
+      - name: Install Minimal Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
+          sudo apt-get install -y --no-install-recommends \
             ca-certificates \
             fonts-liberation \
-            libappindicator3-1 \
-            libasound2t64 \  # 关键修改
-            libatk-bridge2.0-0 \
-            libatk1.0-0 \
-            libc6 \
-            libcairo2 \
-            libcups2 \
-            libdbus-1-3 \
-            libexpat1 \
-            libfontconfig1 \
-            libgbm1 \
-            libgcc1 \
-            libglib2.0-0 \
-            libgtk-3-0 \
-            libnspr4 \
             libnss3 \
-            libpango-1.0-0 \
-            libpangocairo-1.0-0 \
-            libstdc++6 \
-            libx11-6 \
+            libgbm1 \
+            libasound2 \
             libx11-xcb1 \
-            libxcb1 \
             libxcomposite1 \
-            libxcursor1 \
             libxdamage1 \
-            libxext6 \
             libxfixes3 \
-            libxi6 \
             libxrandr2 \
-            libxrender1 \
-            libxss1 \
-            libxtst6 \
-            lsb-release \
-            wget \
-            xdg-utils
+            libxshmfence1
 
-      - name: Install Puppeteer
-        run: npm install puppeteer
+      - name: Install Puppeteer with Chrome
+        run: |
+          npm install puppeteer@21.7.0
+          npx playwright install chrome
+
+      - name: Create Downloads Directory
+        run: mkdir -p downloads
 
       - name: Run Scraper
         run: node scrape-itch-downloads.js
         timeout-minutes: 20
+        env:
+          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true # 使用系统已安装的Chrome
 
       - name: Upload to release (each file separately)
         uses: softprops/action-gh-release@v2
