--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,10 +29,12 @@ jobs:
           # 下载并解压
           DOWNLOAD_URL="https://github.com/BraedonWooding/itch-downloader/releases/download/$LATEST_VERSION/itch-downloader-$LATEST_VERSION-x86_64-unknown-linux-gnu.tar.gz"
           curl -L -o itch-downloader.tar.gz "$DOWNLOAD_URL"
-          tar -xzf itch-downloader.tar.gz
           
-          # 重命名并安装
-          mv itch-downloader-* itch-downloader
+          # 列出压缩包内容
+          tar -tzf itch-downloader.tar.gz
+          
+          # 提取并安装
+          tar -xzf itch-downloader.tar.gz
           chmod +x itch-downloader
           sudo mv itch-downloader /usr/local/bin/
           
