--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,16 +46,9 @@ jobs:
           git clean -fdx
           git reset --hard
           cp -r /tmp/builds .
-
-          if [ -d "builds/anuke/mindustry/files" ] && [ "$(ls -A builds/anuke/mindustry/files)" ]; then
-            find builds/anuke/mindustry/files -type f -exec cp "{}" ./ \;
-          else
-            echo "❌ No files to copy"
-            exit 1
-          fi
-
-          echo "This is a mirror of Mindustry builds from Itch.io" > README.md
-
+          cp builds/anuke/mindustry/files/* ./
+          rm -rf *32-bit*
+          rm -rf builds
 
 
       - name: Commit and push to tag
