--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,33 +34,16 @@ jobs:
         run: |
              ls -R builds
              rm -rf builds/anuke/mindustry/files/*32-bit*
-             echo "version=itch-mirror" >> $GITHUB_OUTPUT
 
-      - name: Check if remote tag exists
-        id: check_tag
-        run: |
-          TAG="v${{ steps.get_version.outputs.version }}"
-          if git ls-remote --tags origin | grep -q "refs/tags/$TAG$"; then
-            echo "tag_exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "tag_exists=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Create tag if not exists
-        if: steps.check_tag.outputs.tag_exists == 'false'
-        run: |
-          TAG="v${{ steps.get_version.outputs.version }}"
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git tag "$TAG"
-          git push origin "$TAG"
-
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.get_version.outputs.version }}
-          name: Release v${{ steps.get_version.outputs.version }}
+          tag_name: itch-mirror
+          name: ${{ steps.date.outputs.date }}
           files: builds/anuke/mindustry/files/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
